# fzlbpms

./: .dockerignore  .env.template  .gitignore  PROJECT_ANALYSIS.md  README.org  docker-compose-up.sh  docker-compose.yml  model_change_instructions.txt  restclient-moodle-rest-api.rest  run-stack.toml  static-analysis.datadog.yml
ansible/: README.md  ansible.cfg  commands-aliases.yml  (+3 more)
src-projects/fzlbpmsadmin/: Cargo.toml  package-lock.json  package.json  tauri.conf.json
src-projects/fzlbpmsadmin/angular-ui/: angular.json  package-lock.json  package.json
src-projects/fzlbpmsadmin/angular-ui/src/app/: app.config.ts  app.html  app.routes.ts  app.ts
src-projects/fzlbpmsadmin/angular-ui/src/app/components/layout/fixed-head/: fixed-head.css  fixed-head.html  fixed-head.ts
src-projects/fzlbpmsadmin/angular-ui/src/app/components/views/apps-home-view/: apps-home-view.css  apps-home-view.html  apps-home-view.ts
src-projects/fzlbpmsadmin/angular-ui/src/app/components/views/container-details-view/: container-details-view.css  container-details-view.html  container-details-view.ts
src-projects/fzlbpmsadmin/angular-ui/src/app/components/views/fzlbpms-containers-stacks-view/: fzlbpms-containers-stacks-view.css  fzlbpms-containers-stacks-view.html  fzlbpms-containers-stacks-view.spec.ts  fzlbpms-containers-stacks-view.ts
src-projects/fzlbpmsadmin/angular-ui/src/app/components/views/fzlbpms-containers-view/: fzlbpms-containers-view.css  fzlbpms-containers-view.html  fzlbpms-containers-view.spec.ts  fzlbpms-containers-view.ts  service-access.ts
src-projects/fzlbpmsadmin/angular-ui/src/app/components/views/fzlbpms-home-view/: fzlbpms-home-view.html  fzlbpms-home-view.spec.ts  fzlbpms-home-view.ts
src-projects/fzlbpmsadmin/angular-ui/src/app/guards/: auth.guard.ts
src-projects/fzlbpmsadmin/angular-ui/src/app/services/: auth.service.ts
src-projects/fzlbpmsadmin/capabilities/: shell-commands.json
src-projects/fzlbpmsadmin/src/: auth_commands.rs  cmd.rs  containers.rs  containers_commands_tauri.rs  containers_tauri_commands.rs  main.rs  moodle_api.rs  projects.rs  projects_tauri_commands.rs
(+182 files in other folders)
