[package]
name = "fzlbpmsadmin"
version = "0.1.0"
edition = "2021"

[dependencies]
# Dependências do Tauri v2 (RC - Release Candidate)
tauri = { version = "2.0.0-rc.13", features = ["tray-icon"] }
tauri-plugin-http = "2.0.0-rc.7"
tauri-plugin-shell = "2.0.0-rc.7"

# Logging
log = "0.4"
fern = "0.6"
chrono = { version = "0.4", features = ["serde"] }

# Suas dependências originais
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
bollard = "0.19.4"
futures = "0.3"
serde_yaml = "0.9.34"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies.git2]
version = "0.19.0"

[dependencies.tempfile]
version = "3.10.1"

# Workaround for a rustc/LLVM SIGSEGV on the current toolchain (rustc 1.97.1 /
# LLVM 22): the crash is in DWARF variable-location debug-info generation while
# compiling this crate's large tauri::generate_handler! expansion. Bumping
# RUST_MIN_STACK only delays it (rustc keeps asking for 2x), so we cut the debug
# level to line-tables-only, which avoids the pathological codegen path while
# still giving file:line info in backtraces. Restore `debug = 2` (or delete this
# section) once the upstream toolchain bug is fixed.
[profile.dev]
debug = 1

